# ANARI-SDK

src/hdanari/: CMakeLists.txt  geometry.cpp  geometry.h  mesh.cpp  mesh.h  points.cpp  points.h  renderDelegate.cpp  renderParam.h
src/hdanari/mdl/: CMakeLists.txt  api.h  mdlRegistry.cpp  mdlRegistry.h
src/hdanari/rd/: CMakeLists.txt  geometry.cpp  geometry.h  material.cpp  material.h  materialTokens.h  renderDelegate.cpp  renderDelegate.h  renderParam.h
src/hdanari/rd/material/: matte.cpp  matte.h  mdl.cpp  mdl.h  physicallyBased.cpp  physicallyBased.h  textureLoader.h
src/hdanari/sdr/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  mdlDiscoveryPlugin.cpp  mdlDiscoveryPlugin.h  mdlNodes.cpp  mdlNodes.h  mdlParserPlugin.cpp  mdlParserPlugin.h  mdlRegistry.cpp  mdlRegistry.h  plugInfo.json.in  tokens.cpp  tokens.h
